--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="ServeltProject">
+        
+    <wb-module deploy-name="rent_car_jsp">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="ServeltProject"/>
-        <property name="java-output-path" value="/ServeltProject/build/classes"/>
+                
+        <property name="java-output-path" value="/rent_car_jsp/build/classes"/>
+        <property name="context-root" value="rent_car_jsp"/>
+            
     </wb-module>
+    
 </project-modules>
